Product and product Detail

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                            
                                         </li>
                                         
-                                        <li><a href="#" class="main-menu-list">Product </a>
+                                        <li><a href="products.html" class="main-menu-list">Product </a>
                                             <!-- <ul class="single-dropdown">
                                                 <li><a href="#">Shop Page</a></li>
                                                 <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
