--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
 							</span>
 						</div>
 					</div>
-				<div class="col-md-6 col-lg-3  col-xl-3 text-right">
-					<button class="btn btn-primary my-account d-none d-lg-block" data-toggle="modal" data-target=".bd-example-modal-lg2">
+				<div class="col-md-6 col-lg-4  col-xl-3  d-flex align-items-center">
+					<button class="btn btn-info btn-xs review-btn">Write A Review</button>
+					<button class="btn btn-primary my-account ml-2  pt-0" data-toggle="modal" data-target=".bd-example-modal-lg2">
 						<i class="fa fa-user" aria-hidden="true"></i> My account
 					</button>
 					<div class="modal fade bd-example-modal-lg2" tabindex="-1" aria-hidden="true">
